# ChangeLog for sys-libs/uclibc
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/uclibc/ChangeLog,v 1.93 2014/08/12 06:47:41 vapier Exp $

  12 Aug 2014; Mike Frysinger <vapier@gentoo.org> uclibc-0.9.33.2-r12.ebuild,
  uclibc-9999.ebuild:
  Die if people try USE=nptl w/i386 targets.

*uclibc-0.9.33.2-r12 (04 Aug 2014)

  04 Aug 2014; Mike Frysinger <vapier@gentoo.org> +uclibc-0.9.33.2-r12.ebuild:
  Pull in time.h updates to fix building w/latest udev.

  01 Aug 2014; Mike Frysinger <vapier@gentoo.org> uclibc-0.9.33.2-r11.ebuild:
  Stabilize for all.

*uclibc-0.9.33.2-r11 (27 Apr 2014)

  27 Apr 2014; Mike Frysinger <vapier@gentoo.org> +uclibc-0.9.33.2-r11.ebuild:
  Add fix from upstream for sys/mount.h updates #508522 by Anthony Basile.

  27 Apr 2014; Mike Frysinger <vapier@gentoo.org> uclibc-0.9.33.2-r10.ebuild:
  Stabilize for all.

*uclibc-0.9.33.2-r10 (18 Feb 2014)

  18 Feb 2014; Mike Frysinger <vapier@gentoo.org> +uclibc-0.9.33.2-r10.ebuild:
  Add more pread/pwrite fixes from upstream #500382 by Steev Klimaszewski.

  02 Feb 2014; Patrick Lauer <patrick@gentoo.org> metadata.xml:
  Remove unneeded useflag from metadata.xml

  01 Feb 2014; Mike Frysinger <vapier@gentoo.org> -uclibc-0.9.28.3-r8.ebuild,
  -uclibc-0.9.30.1-r1.ebuild, -uclibc-0.9.30.1.ebuild, -uclibc-0.9.30.ebuild,
  -uclibc-0.9.33.1-r1.ebuild, -uclibc-0.9.33.1.ebuild:
  Drop really old versions we no longer support.

*uclibc-0.9.33.2-r9 (08 Jan 2014)

  08 Jan 2014; Mike Frysinger <vapier@gentoo.org> +uclibc-0.9.33.2-r9.ebuild:
  Add fix from upstream for marking ll_tzname vars local #497466 by David
  Hendricks.

  25 Dec 2013; Mike Frysinger <vapier@gentoo.org> uclibc-0.9.33.2-r8.ebuild:
  Fast stabilize due to crasher in current stable #495256 by Anthony Basile.

*uclibc-0.9.33.2-r8 (24 Dec 2013)

  24 Dec 2013; Mike Frysinger <vapier@gentoo.org> +uclibc-0.9.33.2-r8.ebuild: