@@ -1,6 +1,12 @@
 # ChangeLog for sys-libs/uclibc
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/uclibc/ChangeLog,v 1.93 2014/08/12 06:47:41 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/uclibc/ChangeLog,v 1.94 2014/10/21 01:15:17 blueness Exp $
+
+*uclibc-0.9.33.9999 (21 Oct 2014)
+
+  21 Oct 2014; Anthony G. Basile <blueness@gentoo.org>
+  +uclibc-0.9.33.9999.ebuild:
+  Add live ebuild for 0.9.33 branch, bug #510082
 
   12 Aug 2014; Mike Frysinger <vapier@gentoo.org> uclibc-0.9.33.2-r12.ebuild,
   uclibc-9999.ebuild:
